--- a/DnsUpdaters.Google/DnsUpdater.DnsUpdaters.Google.csproj
+++ b/DnsUpdaters.Google/DnsUpdater.DnsUpdaters.Google.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>$(DefaultTargetFramework)</TargetFramework>
@@ -9,7 +9,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Core\Core.csproj" />
+    <ProjectReference Include="..\Core\DnsUpdater.Core.csproj" />
   </ItemGroup>
 
 </Project>
