--- a/Host/appsettings.example.json
+++ b/Host/appsettings.example.json
@@ -15,6 +15,16 @@
       "Hostname": "example.com",
       "Username": "you",
       "Password": "password"
+    },
+    "AzureDns": {
+      "ApplicationTenantDomain": "00000000-0000-0000-0000-000000000000",
+      "ApplicationClientId": "00000000-0000-0000-0000-000000000000",
+      "ApplicationClientSecret": "AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA",
+      "DnsSubscriptionId": "00000000-0000-0000-0000-000000000000",
+      "DnsResourceGroup": "global",
+      "DnsZoneName": "example.com",
+      "DnsRelativeRecordSetName": "sub",
+      "UpdateMetaData": true
     }
   }
 }
