Add comments, runtime binding for services.

--- a/Host/appsettings.example.json
+++ b/Host/appsettings.example.json
@@ -8,7 +8,9 @@
     }
   },
   "Host": {
-    "CheckIntervalMs": 30000
+    "CheckIntervalMs": 30000,
+    "IpResolverKey": "IpifyResolver",
+    "DnsUpdaterKey": "AzureDns"
   },
   "Services": {
     "GoogleDns": {
