Add AssemblyName for Host.

--- a/Host/DnsUpdater.Host.csproj
+++ b/Host/DnsUpdater.Host.csproj
@@ -2,6 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>$(DefaultTargetFramework)</TargetFramework>
+    <AssemblyName>DnsUpdater</AssemblyName>
   </PropertyGroup>
 
   <ItemGroup>
