Update project file naming.

--- a/DnsUpdaters.Azure/DnsUpdaters.Azure.csproj
+++ b/DnsUpdaters.Azure/DnsUpdaters.Azure.csproj
@@ -2,6 +2,8 @@
 
   <PropertyGroup>
     <TargetFramework>$(DefaultTargetFramework)</TargetFramework>
+    <RootNamespace>DnsUpdater.DnsUpdaters.Azure</RootNamespace>
+    <AssemblyName>DnsUpdater.DnsUpdaters.Azure</AssemblyName>
   </PropertyGroup>
 
   <ItemGroup>
@@ -13,7 +15,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Core\DnsUpdater.Core.csproj" />
+    <ProjectReference Include="..\Core\Core.csproj" />
   </ItemGroup>
 
 </Project>
