--- a/Core/Core.csproj
+++ b/Core/Core.csproj
@@ -2,6 +2,8 @@
 
   <PropertyGroup>
     <TargetFramework>$(DefaultTargetFramework)</TargetFramework>
+    <RootNamespace>DnsUpdater.Core</RootNamespace>
+    <AssemblyName>DnsUpdater.Core</AssemblyName>
   </PropertyGroup>
 
   <ItemGroup>
