--- a/DnsUpdaters.Google/DnsUpdaters.Google.csproj
+++ b/DnsUpdaters.Google/DnsUpdaters.Google.csproj
@@ -1,7 +1,9 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>$(DefaultTargetFramework)</TargetFramework>
+    <RootNamespace>DnsUpdater.DnsUpdaters.Google</RootNamespace>
+    <AssemblyName>DnsUpdater.DnsUpdaters.Google</AssemblyName>
   </PropertyGroup>
 
   <ItemGroup>
@@ -9,7 +11,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Core\DnsUpdater.Core.csproj" />
+    <ProjectReference Include="..\Core\Core.csproj" />
   </ItemGroup>
 
 </Project>
