Add Cloudflare DNS updater.

--- a/Host/appsettings.example.json
+++ b/Host/appsettings.example.json
@@ -13,11 +13,6 @@
     "DnsUpdaterKey": "AzureDns"
   },
   "Services": {
-    "GoogleDns": {
-      "Hostname": "example.com",
-      "Username": "you",
-      "Password": "password"
-    },
     "AzureDns": {
       "ApplicationTenantDomain": "00000000-0000-0000-0000-000000000000",
       "ApplicationClientId": "00000000-0000-0000-0000-000000000000",
@@ -27,6 +22,16 @@
       "DnsZoneName": "example.com",
       "DnsRelativeRecordSetName": "sub",
       "UpdateMetaData": true
+    },
+    "CloudflareDns": {
+      "Zone": "example.com",
+      "DnsRecord": "www.example.com",
+      "Key": "abc123"
+    },
+    "GoogleDns": {
+      "Hostname": "example.com",
+      "Username": "you",
+      "Password": "password"
     }
   }
 }
