--- a/Host/Host.csproj
+++ b/Host/Host.csproj
@@ -4,10 +4,12 @@
     <TargetFramework>$(DefaultTargetFramework)</TargetFramework>
     <RootNamespace>DnsUpdater.Host</RootNamespace>
     <AssemblyName>DnsUpdater</AssemblyName>
+    <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Version="$(MicrosoftPackageVersion)" Include="Microsoft.Extensions.Hosting" />
+    <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.10.14" />
   </ItemGroup>
 
   <ItemGroup>
