--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -2,19 +2,28 @@ name: Docker Publish
 
 on:
   push:
-    branches: [ main ]
+    branches:
+      - "main"
 
 jobs:
-  build:
+  docker:
     runs-on: ubuntu-latest
     steps:
-    - name: docker login
-      uses: docker/login-action@v1 
-      with:
-        username: ${{ secrets.DOCKERHUB_USERNAME }}
-        password: ${{ secrets.DOCKERHUB_TOKEN }}
-    - name: docker build/push
-      uses: docker/build-push-action@v2
-      with:
-        push: true
-        tags: ${{ secrets.DOCKERHUB_IMAGE_IDENTIFIER }}:latest
+      - name: Checkout
+        uses: actions/checkout@v4
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v3
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+      - name: Login to Docker Hub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+      - name: Build and push
+        uses: docker/build-push-action@v5
+        with:
+          context: .
+          platforms: linux/amd64,linux/arm64
+          push: true
+          tags: ${{ secrets.DOCKERHUB_IMAGE_IDENTIFIER }}:latest
